Fix alignment

--- a/styles.css
+++ b/styles.css
@@ -167,9 +167,11 @@ footer {
 
     .aside-1 {
         max-width: 100%;
+        align-self: stretch;
     }
     .container-1 {
         flex-direction: column;
+        align-items: center;
     }
 
     .container-1 article p {
